NetBSD Problem Report #42196

From tron@zhadum.org.uk  Sun Oct 18 12:19:48 2009
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 392D463B902
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 18 Oct 2009 12:19:48 +0000 (UTC)
Message-Id: <20091018121945.39FACFAEA4@lyssa.zhadum.org.uk>
Date: Sun, 18 Oct 2009 13:19:45 +0100 (BST)
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: Parser for "/etc/resolv.conf" in "mdnsd" considered harmful
X-Send-Pr-Version: 3.95

>Number:         42196
>Category:       bin
>Synopsis:       Parser for "/etc/resolv.conf" in "mdnsd" considered harmful
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 18 12:20:00 +0000 2009
>Closed-Date:    Thu Oct 15 16:17:26 +0000 2015
>Last-Modified:  Thu Oct 15 16:17:26 +0000 2015
>Originator:     tron@zhadum.org.uk
>Release:        NetBSD 5.99.20
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:
System: NetBSD lyssa.zhadum.org.uk 5.99.20 NetBSD 5.99.20 (LYSSA) #0: Fri Oct 16 09:54:46 BST 2009 tron@lyssa.zhadum.org.uk:/src/sys/compile/LYSSA i386
Architecture: i386
Machine: i386
>Description:
"mdnsd" uses a home grown parser ("mDNSPosix.c", function "ParseDNSServers")
to parse "/etc/resolv.conf". This parser only understands "nameserver"
lines with IPv4 addresses in them. The DNS resolve in NetBSD's "libc"
however supports IPv6 addresses as well which makes this an viable
configuration option.

>How-To-Repeat:
Configure only IPv6 nameservers in "/etc/resolv.conf".

>Fix:
None provided but it is eventually not very difficult.
From "mDNSPosix.c":

            mDNSAddr DNSAddr;
            DNSAddr.type = mDNSAddrType_IPv4;
            DNSAddr.ip.v4.NotAnInteger = ina.s_addr;
            mDNS_AddDNSServer(m, NULL, mDNSInterface_Any, &DNSAddr, UnicastDNSPort);

It might be enough to call mDNS_AddDNSServer() with an IPv6 record
to fix this problem.

>Release-Note:

>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42196 CVS commit: src/external/apache2/mDNSResponder/dist/mDNSPosix
Date: Thu, 15 Oct 2015 16:14:40 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Thu Oct 15 16:14:40 UTC 2015

 Modified Files:
 	src/external/apache2/mDNSResponder/dist/mDNSPosix: mDNSPosix.c

 Log Message:
 Add support for parsing IPv6 nameservers found in resolv.conf.
 Fixes PR bin/42196.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 \
     src/external/apache2/mDNSResponder/dist/mDNSPosix/mDNSPosix.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: roy@NetBSD.org
State-Changed-When: Thu, 15 Oct 2015 16:17:26 +0000
State-Changed-Why:
Problem fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.