Add support for parsing IPv6 nameservers found in resolv.conf. Fixes PR bin/42196.